# SolVerScan

./: README.md  pyproject.toml
src/solverscan/: __init__.py  cli.py  compiler_version_getter.py  remove_comments.py  source_manager.py  version_detector.py
